feat: API feture complete
TODO: update logic to move items with folder-structure. ChildCount
calculation of parent folders missing.
